fixed page width for better view on mobile devices

--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1920px;
 }
 
 .nav-div{
